final proyect is uploaded

--- a/index.html
+++ b/index.html
@@ -42,5 +42,98 @@
     <link rel="preload" href="css/styles.css" as="styles" />
     <link rel="stylesheet" href="css/styles.css" as="styles" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav class="header__nav">
+          <p class="header__logo">Header logo</p>
+          <ul class="header__menu">
+            <li><a class="header__link" href="#">Header link one</a></li>
+            <li><a class="header__link" href="#">Header link two</a></li>
+            <li><a class="header__link" href="#">Header link tree</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="container hero__container">
+          <div class="hero__right">
+            <h1 class="hero__tilte">This website is awesome</h1>
+            <p class="hero__text">
+              This website has some subtext that goes here under the main title.
+              It's a smaller font and the color is lower contrast
+            </p>
+            <button class="hero__button"><a href="">Sign up</a></button>
+          </div>
+          <picture class="hero__left"> </picture>
+        </div>
+      </section>
+      <section class="secondary__section">
+        <div class="container">
+          <h2 class="secondary__title">Some random information</h2>
+          <article class="secondary__flex">
+            <div class="secondary__container">
+              <picture class="secondary__imgcontainer"
+                ><img src="" alt=""
+              /></picture>
+              <p class="secondary__text">
+                this is some subtext under and illustration of image
+              </p>
+            </div>
+            <div class="secondary__container">
+              <picture class="secondary__imgcontainer"
+                ><img src="" alt=""
+              /></picture>
+              <p class="secondary__text">
+                this is some subtext under and illustration of image
+              </p>
+            </div>
+            <div class="secondary__container">
+              <picture class="secondary__imgcontainer"
+                ><img src="" alt=""
+              /></picture>
+              <p class="secondary__text">
+                this is some subtext under and illustration of image
+              </p>
+            </div>
+            <div class="secondary__container">
+              <picture class="secondary__imgcontainer"
+                ><img src="" alt=""
+              /></picture>
+              <p class="secondary__text">
+                this is some subtext under and illustration of image
+              </p>
+            </div>
+          </article>
+        </div>
+      </section>
+      <section class="tertiary__section">
+        <blockquote class="tertiary__blockquote">
+          <p class="tertiary__text">
+            This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All i know is that it looks nice
+          </p>
+          <footer class="tertiary__footer">
+            <strong>-Thor, God of Thunder</strong>
+          </footer>
+        </blockquote>
+      </section>
+      <section class="fourth__container container">
+        <div class="fourth__right">
+          <h3 class="fourth__title">Call to action! It's time!</h3>
+          <p class="fourth__text">
+            Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <div class="fourth__left">
+          <button class="hero__button fourth__button">Sign up</button>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <p>Copyright &copy; The Odin Project 2025</p>
+    </footer>
+  </body>
 </html>
