--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     />
 
     <!-- links & preload -->
-    <link rel="preload" href="css/styles.css" as="styles" />
-    <link rel="stylesheet" href="css/styles.css" as="styles" />
+    <link rel="preload" href="css/styles.css" as="style" />
+    <link rel="stylesheet" href="css/styles.css" as="style" />
   </head>
   <body>
     <header class="header">
